--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "lodash": "^4.17.21",
     "postcss-cli": "^8.3.1",
+    "random-word-wikipedia": "^1.0.5",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
