--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "lodash": "^4.17.21",
+    "p5": "0.9.0",
     "postcss-cli": "^8.3.1",
     "random-word-wikipedia": "^1.0.5",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-p5": "^1.3.19",
+    "react-p5-wrapper": "^2.4.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
+    "styled-components": "^5.2.3",
+    "styled-reset": "^4.3.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
